# traceview

./: .gitignore  Cargo.toml  README.md  index.html  loop  out
src/: main.rs  trace.rs  ui.rs
src/trace/: block.rs  cfg.rs  function.rs  register.rs
src/ui/: file.rs  graph.rs
tests/: selection
