[package]
name = "traceview"
version = "0.1.0"
edition = "2021"


[dependencies]
egui = "0.25.0"
egui_plot = "0.25.0"
eframe = { version = "0.25.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
log = "0.4"
rfd = "0.12.1"
cfg-if = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.112"
egui_extras = { version = "0.25.0", features = ["image"] }
image = { version = "0.24.8", features = ["png", "jpeg", "jpeg_rayon"], default-features = false }
thiserror = "1.0.56"
byteorder = { version = "1.5.0", features = ["i128"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Url", "File", "Blob", "HtmlAnchorElement", "BlobPropertyBag", "FilePropertyBag"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


